--- a/apache-tomcat-8.0.53-src/pom.xml
+++ b/apache-tomcat-8.0.53-src/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>ecj</artifactId>
             <version>4.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
  
 </project>
